[package]
name = "aniscrobble"
version = "0.1.0"
edition = "2024"

[features]
default = ["native-tls"]
native-tls = ["ureq/native-tls"]
vendored = ["ureq/vendored"]
brotli = ["ureq/brotli"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
bincode = { version = "1.3.3" }
clap = { version = "4.5.39", features = ["derive"] }
directories = "6.0.0"
open = "5.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ureq = { version = "3.0.11", features = ["json", "platform-verifier"] }

[dependencies.heed]
version = "0.22.0"
default-features = false
features = ["serde", "serde-bincode"]

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.172"
